force-app/main/default/objects/Lead/fields/CommercialEmailConsent__c.field-meta.xml
<CustomField>
    <fullName>CommercialEmailConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Consent to receive emails
from Commercial channels.</description>
    <label>Commercial Email Consent</label>
    <type>Checkbox</type>
</CustomField>