force-app/main/default/objects/Lead/fields/CommercialPhoneConsent__c.field-meta.xml
<CustomField>
    <fullName>CommercialPhoneConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Consent to receive phone
calls from Commercial
channels.</description>
    <label>Commercial Phone Consent</label>
    <type>Checkbox</type>
</CustomField>