force-app/main/default/objects/Lead/fields/MarketingPhoneConsent__c.field-meta.xml
<CustomField>
    <fullName>MarketingPhoneConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Consent to receive Phone
calls from Marketing
channels.</description>
    <label>Marketing Phone Consent</label>
    <type>Checkbox</type>
</CustomField>